# icp-token-wallet

./: README.md  lib.rs
declarations/: wallet_backend.did
declarations/wallet_backend/: index.d.ts  index.js  wallet_backend.did.d.ts  wallet_backend.did.js
declarations/wallet_frontend/: index.d.ts  index.js
wallet_backend/: Cargo.toml  lib.rs
wallet_frontend/: index.html  package.json
wallet_frontend/src/: App.jsx
wallet_frontend/src/components/: Wallet.js
wallet_frontend/src/services/: walletService.js
